2004-07-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_colormap_alloc_color): Raise
	ValueError instead of TypeError if unable to parse colour
	specification.
	(_wrap_gdk_color_parse): idem.  Fixes #144862.

2004-07-04  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_tree_model_rows_reordered)
	Allow None, () or "" for top level path.

2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.defs (gtk_hbox_new): Change constructor to property based.

	* gobjectmodule.c (pyg_parse_constructor_args): Helper function
	invoked from the generated constructors.

	* codegen/codegen.py (Wrapper.write_constructor): Delegate to
	self.write_property_based_constructor() when appropriate.
	(GObjectWrapper.write_property_based_constructor): New constructor
	generator, that writes constructors that use g_object_newv and
	pass constructor arguments as properties.

	* codegen/definitions.py (Parameter): New Parameter class, to hold
	the items in (parameter ...).  Emulates tuple for compatibility,
	but is more extensible.
	(Property): New property class, to hold (property ...) items.
	(FunctionDef.__init__): Parse (property ...), for new property
	based constructors.

2004-07-04  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_tree_store_new) Fix typo.
	(_wrap_gtk_tree_model_rows_reordered) Allow None for path and iter
	to allow reordering top level rows. Fixes #143834.
	John Ehresman's patch with mods.

2004-07-04  John Ehresman  <jpe@wingide.com>

	* tests directory: unit tests

2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktreeview.override (_wrap_gtk_tree_store_new): Use
	g_object_newv to create instance, thus allowing subclassing
	without __gobject_init__.

	* gtk/gtkmodule.c (init_gtk): Register new warning category,
	GtkWarning.  Register a log handler for Gtk warnings that issues a