@@ -1,5 +1,8 @@
 2004-07-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
+	* codegen/definitions.py (FunctionDef.write_defs): Handle new
+	properties syntax.
+
 	* gtk/gdk.override (_wrap_gdk_colormap_alloc_color): Raise
 	ValueError instead of TypeError if unable to parse colour
 	specification.
